# Q-ITAGS

./: .clang-format  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: feature_request.yaml
.github/workflows/: auto-clang-format.yml  ci.yml  stale.yml
ActiveRequirementLearning/: active_learning_stats.pickle  active_learning_stats_v2.pickle  active_learning_stats_v3.pickle  active_learning_stats_v4.pickle  active_learning_stats_v5.pickle  active_requirements_learning.py  example.py  graph_results_active_learner.py  init_data.pickle  madden_regeression.py  query_strategies.py  stopping_criteria.py  survivor_regression.py  test2.py  total_additional.pickle  total_learning_stats.pickle  total_learning_stats_0.pickle  total_learning_stats_1.pickle  total_learning_stats_10.pickle  total_learning_stats_11.pickle  total_learning_stats_12.pickle  total_learning_stats_13.pickle  total_learning_stats_14.pickle  total_learning_stats_15.pickle  total_learning_stats_16.pickle  total_learning_stats_17.pickle  total_learning_stats_18.pickle  total_learning_stats_19.pickle  total_learning_stats_2.pickle  total_learning_stats_3.pickle  total_learning_stats_3_0.pickle  total_learning_stats_3_1.pickle  total_learning_stats_3_10.pickle  total_learning_stats_3_11.pickle  total_learning_stats_3_12.pickle  total_learning_stats_3_13.pickle  total_learning_stats_3_14.pickle  total_learning_stats_3_15.pickle  total_learning_stats_3_16.pickle  total_learning_stats_3_17.pickle  (+137 more)
ActiveRequirementLearning/ActiveRequirementLearning/: active_requirement_learning_dataset.py  queryable_expert.py  synthetic_data_creator.py
ActiveRequirementLearning/MaddenActiveLearningRequirements/: madden_dataset.py  madden_oracle.py
ActiveRequirementLearning/images/: madden_1.eps
cmake/: CheckGit.cmake  Findgurobi.cmake
compare_with_itags/python_scripts/: comp_itags.py  comp_itags_new.py  compare_compute_time.py  itags_problem_generator.py  proof_scatter.py  proof_scatter_alloc.py
docker/: fix_msgs.py  grstapse.dockerfile  run.sh
docs/: CMakeLists.txt  Doxyfile.in
executables/: CMakeLists.txt
executables/grstaps/: main.cpp
executables/itags/: main.cpp
executables/speed_tests/: main.cpp
hooks/: clang_format.py
hooks/clang_format/: git_diff_format.py  partial_files_format.py  patch_set.py
include/grstapse/: config.hpp.in  core.hpp.in  robot.hpp  species.hpp  task.hpp
output_proof/: 0.010000survivor_problem0.json  0.010000survivor_problem14.json  0.010000survivor_problem16.json  0.010000survivor_problem25.json  0.010000survivor_problem3.json  0.010000survivor_problem30.json  0.010000survivor_problem31.json  0.010000survivor_problem37.json  0.010000survivor_problem38.json  0.010000survivor_problem39.json  0.010000survivor_problem40.json  0.010000survivor_problem41.json  0.010000survivor_problem42.json  0.010000survivor_problem43.json  0.010000survivor_problem44.json  0.010000survivor_problem45.json  0.010000survivor_problem51.json  0.010000survivor_problem55.json  0.010000survivor_problem58.json  0.010000survivor_problem59.json  0.010000survivor_problem6.json  0.010000survivor_problem62.json  0.010000survivor_problem7.json  0.100000survivor_problem1.json  0.100000survivor_problem13.json  0.100000survivor_problem17.json  0.100000survivor_problem2.json  0.100000survivor_problem20.json  0.100000survivor_problem23.json  0.100000survivor_problem25.json  0.100000survivor_problem26.json  0.100000survivor_problem27.json  0.100000survivor_problem3.json  0.100000survivor_problem32.json  0.100000survivor_problem33.json  0.100000survivor_problem37.json  0.100000survivor_problem39.json  0.100000survivor_problem40.json  0.100000survivor_problem41.json  0.100000survivor_problem42.json  (+259 more)
python/: CMakeLists.txt  README.md
python/embed/: gnn_scenario_selector.py
python/modules/: CMakeLists.txt  grstapse.cpp
python/src/: train_m2p.py
python/tests/: test_itags.py
scripts/: clang_tidy.py  gen_sampled_maps.py  run-clang-tidy.py
src/: robot.cpp  species.cpp  task.cpp
src/parameters/: algorithm_parameters_factory_base.cpp  motion_planner_parameters_factory.cpp  parameters_factory.cpp  scheduler_parameters_factory.cpp  search_parameters_factory.cpp
src/problem_generators/: grstaps_problem_generator.cpp  itags_problem_generator.cpp
src/problem_inputs/: grstaps_problem_inputs.cpp  itags_problem_inputs.cpp  multi_agent_path_finding_problem_inputs.cpp  scheduler_problem_inputs.cpp
src/scheduling/: common_scheduler_motion_planner_interface.cpp  initial_transition_failure.cpp  schedule_base.cpp  scheduler_base.cpp  scheduler_motion_planner_interface_base.cpp  scheduler_result.cpp  task_duration_failure.cpp  transition_failure.cpp
src/task_allocation/: robot_task_failure.cpp  robot_task_pair_failure.cpp  species_task_failure.cpp  species_task_pair_failure.cpp
tests/: CMakeLists.txt
tests/include/: mock_dms_task_info.hpp  mock_grstaps_problem_inputs.hpp  mock_incremental_task_allocation_node.hpp  mock_itags_problem_inputs.hpp  mock_normalized_schedule_quality.hpp  scheduling_setup.hpp
tests/src/: mock_normalized_schedule_quality.cpp  scheduling_setup.cpp  test_allocation_percentage_remaining.cpp  test_astar.cpp  test_benders_parallel_stochastic_milp_scheduler.cpp  test_benders_stochastic_milp_scheduler.cpp  test_cbs.cpp  test_complete_euclidean_graph_motion_planner.cpp  test_complete_sampled_euclidean_graph_motion_planner.cpp  test_configuration_base.cpp  test_custom_hashings.cpp  test_dereference_container_wrapper.cpp  test_deterministic_milp_scheduler.cpp  test_dms_all_transitions_info.cpp  test_dms_task_info.cpp  test_dms_transition_info.cpp  test_euclidean_graph_a_star.cpp  test_euclidean_graph_environment.cpp  test_euclidean_graph_motion_planner.cpp  test_grstaps_problem_inputs.cpp  test_heuristic_approximation_stochastic_milp_scheduler.cpp  test_itags.cpp  test_itags_problem_inputs.cpp  test_monolithic_stochastic_milp_scheduler.cpp  test_mutable_priority_queue.cpp  test_normalized_schedule_quality.cpp  test_ompl_motion_planner.cpp  test_pddl_duration.cpp  test_pddl_function.cpp  test_pddl_headers.cpp  (+12 more)
(+1747 files in other folders)
